# testsearch

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  flib.cpp  flib.hpp  flibInterface.cpp  flibInterface.h  main.cpp  test.c
src/: CMakeLists.txt
src/testsearch/: CMakeLists.txt  testsearch--0.0.1.sql  testsearch.control  testsearch.cpp
